[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Simon Wisdom <simonowisdom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = {extras = ["srv"], version = "^4.7.3"}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
gunicorn = "^22.0.0"
anthropic = "^0.28.0"
flask-cors = "^4.0.1"


[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
